# sandcastle

./: Cargo.toml  Justfile  README.md
config/dev/k3d/: cluster.yaml
config/dev/k3d/manifests/: argo-cd-helmchart.yaml
crates/sandcastle-cli/: Cargo.toml
crates/sandcastle-cli/src/: main.rs
crates/sandcastle-core/: Cargo.toml  xpanded.rs
crates/sandcastle-core/src/: application.rs  crd.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  operator.rs  webhook.rs
crates/sandcastle-core/src/application/: http.rs  operator.rs  reconciliation.rs
crates/sandcastle-core/src/application/http/: webhook.rs
crates/sandcastle-core/src/application/http/webhook/github/: handler.rs
crates/sandcastle-core/src/domain/: environment.rs  vcs.rs
crates/sandcastle-core/src/domain/environment/: models.rs  ports.rs  services.rs
crates/sandcastle-core/src/domain/environment/models/: command.rs  config.rs  environment.rs  gitops.rs  vcs.rs
crates/sandcastle-core/src/domain/environment/models/snapshots/: sandcastle_core__domain__environment__models__environment__tests__large_template.snap
crates/sandcastle-core/src/domain/environment/services/: environment.rs  github.rs  gitops.rs  vcs.rs
crates/sandcastle-core/src/domain/repositories/: models.rs  ports.rs  services.rs
crates/sandcastle-core/src/domain/vcs/: github.rs  ports.rs
crates/sandcastle-core/src/infrastructure/: repo_config_service.rs
crates/sandcastle-core/src/operator/: helm.rs  metrics.rs  reconcile.rs
crates/sandcastle-core/src/snapshots/: sandcastle_core__application__tests__test_application.snap  sandcastle_core__crd__tests__crd_yaml.snap  sandcastle_project__crd__tests__crd_yaml.snap
crates/sandcastle-core/src/webhook/github/: handler.rs
crates/sandcastle-core/tests/fixtures/: classic-chart-0.1.0.tgz  example_application_1.yaml  example_application_2.yaml  index.yaml
crates/sandcastle-core/tests/fixtures/classic-chart/: Chart.yaml  values.yaml
crates/sandcastle-core/tests/fixtures/classic-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
crates/sandcastle-core/tests/fixtures/classic-chart/templates/tests/: test-connection.yaml
crates/sandcastle-core/tests/fixtures/github/: issue_comment_webhook_event.json
crates/sandcastle-external-crds/: Cargo.toml  build.rs
crates/sandcastle-external-crds/src/: argocd.rs  lib.rs
crates/sandcastle-external-crds/src/argocd/: application.rs  application_project.rs  application_set.rs
crates/sandcastle-project/: Cargo.toml  README.md
crates/sandcastle-project/src/: crd.rs  domain.rs  error.rs  lib.rs
crates/sandcastle-telemetry/: Cargo.toml
crates/sandcastle-telemetry/src/: lib.rs
crates/sandcastle-utils/: Cargo.toml
crates/sandcastle-utils/src/: axum.rs  http.rs  lib.rs  serde.rs  validation.rs
docs/: contributing.md
