[workspace]
members = ["crates/sandcastle-core", "crates/sandcastle-utils"]
resolver = "3"

[workspace.dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
validator = { version = "0.20.0", features = ["derive"] }
sandcastle-utils = { path = "crates/sandcastle-utils" }
snafu = { version = "0.8.9", features = ["backtrace"] }
serde_yaml = "0.9.34"
insta = { version = "1.43.2" }
tracing = { version = "0.1.38", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "io-util",
  "fs",
] }
