[workspace]
members = [ "crates/sandcastle-cli",
  "crates/sandcastle-core", "crates/sandcastle-external-crds",
  "crates/sandcastle-telemetry",
  "crates/sandcastle-utils",
]
resolver = "3"

[workspace.dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive"], default-features = false }
k8s-openapi = { version = "0.26.0", features = ["v1_34", "schemars"] }
schemars = { version = "1" }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.143"
validator = { version = "0.20.0", features = ["derive"] }
sandcastle-utils = { path = "crates/sandcastle-utils" }
sandcastle-telemetry = { path = "crates/sandcastle-telemetry" }
snafu = { version = "0.8.9", features = ["backtrace"] }
serde_yaml = "0.9.34"
insta = { version = "1.43.2" }
tracing = { version = "0.1.38", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "io-util",
  "fs",
] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
semver = { version = "1.0.27", features = ["serde"] }
sha2 = "0.10.9"
test-log = "0.2.18"
mockito = "1.7.0"
googletest = "0.14.2"
mockall = "0.13.1"
sandcastle-core = { path = "crates/sandcastle-core" }
sandcastle-external-crds = { path = "crates/sandcastle-external-crds" }
