[package]
name = "sandcastle-core"
version = "0.1.0"
edition = "2024"

[dependencies]
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
sandcastle-utils = { workspace = true }
snafu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_yaml.workspace = true
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
semver = { version = "1.0.27" }
sha2 = "0.10.9"

[dev-dependencies]
insta.workspace = true
test-log = "0.2.18"
sandcastle-utils = { workspace = true, features = ["testing"] }
mockito = "1.7.0"
googletest = "0.14.2"
