[package]
name = "sandcastle-core"
version = "0.1.0"
edition = "2024"

[dependencies]
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
sandcastle-utils = { workspace = true }
snafu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
semver.workspace = true
sha2.workspace = true
prometheus-client = "0.23.1"
opentelemetry = { version = "0.30.0", features = ["trace"] }
sandcastle-telemetry = { workspace = true }
futures = "0.3.31"

[dev-dependencies]
insta.workspace = true
test-log.workspace = true
mockito.workspace = true
googletest.workspace = true
