[package]
name = "sandcastle-core"
version = "0.1.0"
edition = "2024"

[dependencies]
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
sandcastle-utils = { workspace = true }
snafu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
semver.workspace = true
sha2.workspace = true
prometheus-client = "0.23.1"
opentelemetry = { version = "0.30.0", features = ["trace"] }
sandcastle-telemetry = { workspace = true }
futures = "0.3.31"
octocrab = "0.45.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header", "typed-routing"] }
headers = "0.4.1"
axum-macros = "0.5.0"
init-tracing-opentelemetry = { version = "0.31.0", features = ["tracing_subscriber_ext"] }
axum-tracing-opentelemetry = "0.30.1"
sandcastle-external-crds = { workspace = true }
async-trait = "0.1.89"
enum_dispatch = "0.3.13"
jsonwebtoken.workspace = true
regex = "1.12.1"

[dev-dependencies]
insta.workspace = true
test-log.workspace = true
mockito.workspace = true
googletest.workspace = true
