[package]
name = "sandcastle-external-crds"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { workspace = true, features = ["derive"] }
k8s-openapi.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
