[package]
name = "sandcastle-telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
snafu.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
validator.workspace = true

[dev-dependencies]
temp-env = "0.3.6"
test-log.workspace = true
tokio.workspace = true
