[package]
name = "sandcastle-utils"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest.workspace = true
validator.workspace = true
mockall.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = "0.4.1"

[dev-dependencies]
